# gnn-riscv

./: .gitignore  pyproject.toml
docs/: problem-statement.md  related-work.md
eval/: __init__.py  _asm_parse.py  baselines.py  cost.py  differential_test.py  verify_io.py  verify_smt.py
examples/specs/: absdiff.spec  absval.spec  isqrt.spec  max.spec  sq_sum.spec
experiments/000_smoke/: config.yaml
experiments/001_scale1k/: config.json  log.csv
experiments/leetcode_001/: config.json  log.csv
experiments/leetcode_002_anghabench/: config.json  log.csv
experiments/leetcode_003_finetune/: config.json  log.csv
model/: __init__.py  asm_decoder.py  asm_decoder_module.py  c_encoder.py  data.py  graph.py  graph_gen.py  lowering.py  spec_encoder.py  train.py  train_leetcode.py  vocab.py
scripts/: build_dataset.py  check_toolchain.sh  demo_pipeline.py  eval_checkpoint.py  eval_leetcode_checkpoint.py  ingest_anghabench.py  ingest_leetcode.py  install_system_deps.sh
spec/: __init__.py  dsl.py  generator.py  interpreter.py  lower_to_c.py  parser.py  serialize.py
tests/: test_leetcode_model.py  test_lowering.py  test_model.py  test_pointers.py  test_smoke.py
