[project]
name = "gnn-riscv"
version = "0.0.1"
description = "GNN-based compute graph generation from formal spec to RV64GC assembly."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "torch-geometric>=2.6",
    "z3-solver>=4.13",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spec*", "eval*", "model*"]

[tool.ruff]
line-length = 100
target-version = "py311"
